Updating phone number

--- a/index.html
+++ b/index.html
@@ -403,11 +403,10 @@
             }, 500);
         }
 
-        // WhatsApp integration (placeholder - will be updated with actual number)
+        // WhatsApp integration
         function openWhatsApp() {
             const message = encodeURIComponent("Olá! Gostaria de agendar uma consulta com a Dra. Kamilla.");
-            // Placeholder number - to be replaced with actual WhatsApp number
-            const whatsappUrl = `https://wa.me/5511999999999?text=${message}`;
+            const whatsappUrl = `https://wa.me/5548988073838?text=${message}`;
             window.open(whatsappUrl, '_blank');
         }
 
